--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,34 @@
 {
-  "name": "wilson/api-challenge-plugin",
-  "description": "A modern WordPress plugin for API data retrieval with caching and custom block",
-  "type": "wordpress-plugin",
-  "license": "GPL-2.0-or-later",
-  "authors": [
-    {
-      "name": "Wilson",
-      "email": "wilson@example.com"
-    }
-  ],
-  "require": {
-    "php": ">=7.4"
-  },
-  "require-dev": {
-    "squizlabs/php_codesniffer": "^3.7",
-    "phpcompatibility/php-compatibility": "^9.3",
-    "wp-coding-standards/wpcs": "^3.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "WilsonApiPlugin\\": "src/"
-    }
-  },
-  "scripts": {
-    "phpcs": "phpcs --standard=WordPress src/",
-    "phpcbf": "phpcbf --standard=WordPress src/"
-  },
-  "config": {
-    "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
-    }
-  }
+	"name": "wilson/api-challenge-plugin",
+	"description": "A modern WordPress plugin for API data retrieval with caching and custom block",
+	"type": "wordpress-plugin",
+	"license": "GPL-2.0-or-later",
+	"authors": [
+		{
+			"name": "Wilson",
+			"email": "wilsonkabatha@gmail.com"
+		}
+	],
+	"require": {
+		"php": ">=7.4"
+	},
+	"require-dev": {
+		"squizlabs/php_codesniffer": "^3.7",
+		"phpcompatibility/php-compatibility": "^9.3",
+		"wp-coding-standards/wpcs": "^3.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"WilsonApiPlugin\\": "src/"
+		}
+	},
+	"scripts": {
+		"phpcs": "phpcs --standard=WordPress src/",
+		"phpcbf": "phpcbf --standard=WordPress src/"
+	},
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	}
 }
